[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tigerasi"
description = "a lightweight python driver for ASI brand Tiger Controllers"
dynamic = ["version"]
license = {text= "MIT"}
authors = [
    {name = "Joshua Vasquez", email = "joshua.vasquez@alleninstitute.org"},
    {name = "Adam Glaser", email = "adam.glaser@alleninstitute.org"},
]
readme = "README.md"
keywords = ['microscopy', 'tiger', 'asi']
classifiers=[
    'License :: OSI Approved :: MIT License',
    'Development Status :: 4 - Beta',
    'Programming Language :: Python'
]

requires-python = ">=3.9"
dependencies = [
    "pyserial",
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "furo",
    "enum-tools[sphinx]",
]

[project.urls]
repository = "https://github.com/AllenNeuralDynamics/TigerASI"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "tigerasi.__version__"}
readme = {file = ["README.md"]}
